:wrench: 환경설정 추가

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,15 @@
 ktor {
+  development = true
+
   deployment {
     port = 8080
-    port = ${?PORT}
+    port = ${?PORT} # 외부에서 port를 주입하면 해당 포트를 사용하고 아니면 8080을 사용한다
+
+    connectionGroupSize = 2
+    workerGroupSize = 5
+    callGroupSize = 10
+    shutdownGracePeriod = 2000
+    shutdownTimeout = 3000
   }
   application {
     modules = [ bifos.com.ApplicationKt.module ]
